--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
+        <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <main>    
             <div class="container">
-                <img src="burnt_fly_web.png" alt="burnt fly logo" />
+                <div class="fly-logo-container">
+                  <img class="fly-logo" src="burnt_fly_web.png" width="120" height="139" alt="burnt fly logo" />
+                  <div class="speech-balloon">
+                    I wasn't burned by the electric fly swatter, but I burn my mind here...
+                  </div>
+                </div>
                 <h1>Burnt Fly</h1>
+                <p>A collection of free API's</p>
                 <section id="jokeapi">
                     <div class="wrapper">
                         <h2>Jokes</h2>
