Disable submit buttons until fetch responce

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <h2>Number Tales</h2>
                         <form id="numbersapi-form">
                             <div class="select-wrap">
-                                <label for="numberapi-type" aria-label="number type">Number Type:</label>
-                                <select id="numberapi-type">
+                                <label for="numbersapi-type" aria-label="number type">Number Type:</label>
+                                <select id="numbersapi-type">
                                     <option value="trivia" selected>Trivia</option>
                                     <option value="year">Year</option>
                                     <option value="math">Math</option>
@@ -133,8 +133,8 @@
                                 </select>
                             </div>
                             <div id="input-number-wrap">
-                                <label for="numberapi-num">Enter number:</label>
-                                <input id="numberapi-num" type="number" value="5" min="0" max="1000">
+                                <label for="numbersapi-num">Enter number:</label>
+                                <input id="numbersapi-num" type="number" value="5" min="0" max="1000">
                             </div>
                             <div id="input-date-wrap">
                                 <label for="myDate">Enter date:</label>
