Disable buttons until fetch responce correction, ids adding

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 </select>
                             </div>
                             <div class="txt" aria-live="polite"></div>
-                            <button type="submit" title="Generate Joke">NEXT JOKE</button>
+                            <button type="submit" id="jokeapi-btn" title="Generate Joke">NEXT JOKE</button>
                         </form> 
                     </div><!-- end wrapper -->
                     <div class="info">
@@ -72,7 +72,7 @@
                         <h2>Geek Jokes</h2>
                         <form id="geekjokesapi-form">
                             <div class="txt" aria-live="polite"></div>
-                            <button type="submit" title="Generate Geek Joke">NEXT JOKE</button>
+                            <button type="submit" id="geekjokesapi-btn" title="Generate Geek Joke">NEXT JOKE</button>
                         </form>
                     </div><!-- end wrapper -->
                     <div class="info">
@@ -85,7 +85,7 @@
                         <h2>Useless Fact</h2>
                         <form id="uselessfactsapi-form">
                             <div class="txt" aria-live="polite"></div>
-                            <button type="submit" title="Generate Useless Fact">NEXT USELESS FACT</button>
+                            <button type="submit" id="uselessfactsapi-btn" title="Generate Useless Fact">NEXT USELESS FACT</button>
                         </form>
                     </div><!-- end wrapper -->
                     <div class="info">
@@ -98,7 +98,7 @@
                         <h2>Keyne Quotes</h2>
                         <form id="kanyerestapi-form">
                             <div class="txt" aria-live="polite"></div>
-                            <button type="submit" title="Generate Keyne Quote">NEXT KEYNE QUOTE</button>
+                            <button type="submit" id="kanyerestapi-btn" title="Generate Keyne Quote">NEXT KEYNE QUOTE</button>
                         </form>
                     </div><!-- end wrapper -->
                     <div class="info">
@@ -111,7 +111,7 @@
                         <h2>Anime Quotes</h2>
                         <form id="animechanapi-form">
                             <div class="txt" aria-live="polite"></div>
-                            <button type="submit" title="Generate Anime Quote">NEXT ANIME QUOTE</button>
+                            <button type="submit" id="animechanapi-btn" title="Generate Anime Quote">NEXT ANIME QUOTE</button>
                         </form>
                     </div><!-- end wrapper -->
                     <div class="info">
