Footer github note

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
             </div> <!-- end container -->
         </main>
         <footer>
-            <p>App developed by <a href="https://web-thread.com/" target="_blank">Web Thread</a></p>
+            <p>App developed by <a href="https://web-thread.com/" target="_blank">Web Thread</a><br>
+               All code is on <a href="https://github.com/web-thread/burnt-fly" target="_blank">GitHub</a></p>
+            
             <p>Special thanks to:<br> 
                 <a href="https://sv443.net/jokeapi/v2/" target="_blank">Joke API</a>,
                 <a href="https://github.com/sameerkumar18/geek-joke-api" target="_blank">Geek Jokes API</a>,
