plus meta open graps + screenshot

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Burnt Fly | Web Thread</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Burnt Fly | Web Thread</title>
+        <meta property="og:title" content="Burnt Fly | Web Thread">
+        <meta property="og:description" content="Burnt Fly App. A collection of free API for fun.">
+        <meta property="og:image" content="http://web-thread.com/apps/burnt-fly/screenshot.png">
+        <meta property="og:url" content="http://web-thread.com/apps/burnt-fly/index.html">
+        <meta property="og:type" content="website">
         <meta name="description" content="Burnt Fly App. A collection of free API for fun." />
         <meta name="author" content="Web Thread">
         <link rel="shortcut icon" href="favicon.ico">
